Fix text align center in form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,6 +433,7 @@ hr {
     left: 35%;
     padding: 50px;
     border-radius: 20px;
+    text-align: center;
 }
 
 .signup-form > h2 {
